# cli-bible

./: .gitignore  README.md  pyproject.toml
cli_bible/: app.py  biblia.css
cli_bible/modules/: __init__.py  config.py  files_to_walk.py
cli_bible/screens/: main.py
cli_bible/widgets/: __init__.py  content.py  menu_tree.py
files/: create_file.py
files/biblia_en_español_sencillo/: copr.htm  signature.txt.asc  spabes_002_GEN_01_read.txt  spabes_002_GEN_02_read.txt  spabes_002_GEN_03_read.txt  spabes_002_GEN_04_read.txt  spabes_002_GEN_05_read.txt  spabes_002_GEN_06_read.txt  spabes_002_GEN_07_read.txt  spabes_002_GEN_08_read.txt  spabes_002_GEN_09_read.txt  spabes_002_GEN_10_read.txt  spabes_002_GEN_11_read.txt  spabes_002_GEN_12_read.txt  spabes_002_GEN_13_read.txt  spabes_002_GEN_14_read.txt  spabes_002_GEN_15_read.txt  spabes_002_GEN_16_read.txt  spabes_002_GEN_17_read.txt  spabes_002_GEN_18_read.txt  spabes_002_GEN_19_read.txt  spabes_002_GEN_20_read.txt  spabes_002_GEN_21_read.txt  spabes_002_GEN_22_read.txt  spabes_002_GEN_23_read.txt  spabes_002_GEN_24_read.txt  spabes_002_GEN_25_read.txt  spabes_002_GEN_26_read.txt  spabes_002_GEN_27_read.txt  spabes_002_GEN_28_read.txt  spabes_002_GEN_29_read.txt  spabes_002_GEN_30_read.txt  spabes_002_GEN_31_read.txt  spabes_002_GEN_32_read.txt  spabes_002_GEN_33_read.txt  spabes_002_GEN_34_read.txt  spabes_002_GEN_35_read.txt  spabes_002_GEN_36_read.txt  spabes_002_GEN_37_read.txt  spabes_002_GEN_38_read.txt  (+1151 more)
files/palabra_de_Dios_para_ti/: copr.htm  spapddpt_002_GEN_01_read.txt  spapddpt_002_GEN_02_read.txt  (+1187 more)
(+1242 files in other folders)
